--- a/css/estilos.css
+++ b/css/estilos.css
@@ -534,6 +534,13 @@ footer a:hover{
    
     
   }
+  .modal-content {
+    margin: auto;
+    display: block;
+    width: 60%;
+    max-width: 600px;
+  }
+  
 
 }
 
